--- a/src/style/home.css
+++ b/src/style/home.css
@@ -19,7 +19,7 @@
 .home__curriculum {
     background-color: #157032;
     margin: 0.5em 0.1em ;
-    padding: 0.5em;
+    padding: 0.5em 5em;
     border-radius: 0.5em;
     color: white;
     font-weight: bold;
@@ -80,7 +80,8 @@ ion-icon:hover {
     transform: scale(1.1);
 }
 .image {
-    display: none;
+    width: 100%;
+    margin-top: 2.5em;
 }
 @media(min-width: 700px) {
     .home__presentation__container {
@@ -98,14 +99,7 @@ ion-icon:hover {
         box-shadow: none;
         
     }
-    .image {
-        position: absolute;
-        top: 5em;
-        right: 2em;
-        display: block;
-        width: 6em;
-
-    }
+    
     h1 {
         margin-top: 1em;
         font-size: 1.5rem;
