--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,28 @@
 .habilities {
+    position: relative;
     text-align: center;
     text-decoration: underline;
     font-size: 1.2rem;
     font-weight: bold;
     margin-top: 0;
     padding-top: 1em;
+    top: 1.5em;
 }
 .habilities__main {
-    height: 90vh;
+    height: 100vh;
 }
 .habilities__container {
     display: flex;
     flex-wrap: wrap;
     justify-content:space-evenly;
     align-items: center;
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
     height: 10em;
     background: rgb(190, 183, 183);
     border-radius: 1em;
     font-size: 0.8rem;
-    margin-top: 1em;
+    margin-top: 3em;
     
 }
 .habilities__blandas__container {
@@ -29,10 +31,10 @@
     flex-wrap: wrap;
     justify-content:space-evenly;
     align-items: center;
-    width: 75%;
+    width: 70%;
     margin: 0 auto;
     height: 15em;
-    margin-top: 1em;
+    margin-top: 3em;
     background: rgb(190, 183, 183);
     border-radius: 1em;
     font-size: 0.8rem;
